--- a/src/assets/i18n/ko.json
+++ b/src/assets/i18n/ko.json
@@ -39,5 +39,13 @@
     "registerNote": "게시글의 이미지를 등록해주세요.",
     "registration": "등록",
     "share": "나눔"
+  },
+
+  "product": {
+    "Attention": "관심",
+    "check": "조회",
+    "memberPost": "이 회원님의 게시글",
+    "ViewMore": "더보기",
+    "relatedPost": "연관 게시글"
   }
 }
